# netdata

./: .gitignore  .gitmodules  .travis.yml  BUILD  CLAUDE.md  CMakeLists.txt  Doxyfile  FUNCTIONS-REFACTOR.md  Makefile.am  config.cmake.h.in  configure.ac  fanotes.txt  go.mod  go.sum  netdata-installer.sh  netdata.spec.in  run.sh  source-files.cmake
aclk/: CMakeLists.txt  aclk.c  aclk_api.c  aclk_api.h  aclk_otp.c  aclk_proxy.h
aclk/schema-wrappers/: chart_stream.cc  chart_stream.h  node_info.cc  node_info.h
collectors/: CMakeLists.txt  Makefile.am
collectors/apps.plugin/: CMakeLists.txt  apps_plugin.c
collectors/cgroups.plugin/: CMakeLists.txt  cgroup-network.c  sys_fs_cgroup.c  sys_fs_cgroup.h
collectors/cgroups.plugin/tests/: test_cgroups_plugin.c  test_doubles.c
collectors/checks.plugin/: CMakeLists.txt
collectors/cups.plugin/: CMakeLists.txt  cups_plugin.c
collectors/diskspace.plugin/: CMakeLists.txt
collectors/ebpf.plugin/: ebpf.c  ebpf.h  ebpf_socket.h
collectors/freebsd.plugin/: CMakeLists.txt
collectors/freeipmi.plugin/: CMakeLists.txt  freeipmi_plugin.c
collectors/idlejitter.plugin/: CMakeLists.txt
collectors/macos.plugin/: CMakeLists.txt
collectors/nfacct.plugin/: CMakeLists.txt  plugin_nfacct.c
collectors/perf.plugin/: CMakeLists.txt  perf_plugin.c
collectors/plugins.d/: CMakeLists.txt  plugins_d.c  plugins_d.h  pluginsd_parser.c  pluginsd_parser.h
collectors/proc.plugin/: CMakeLists.txt  plugin_proc.c  plugin_proc.h  proc_net_dev.c  proc_stat.c
collectors/profile.plugin/: plugin_profile.cc
collectors/python.d.plugin/: Makefile.am  python.d.conf
collectors/python.d.plugin/anomaliespoc/: Makefile.inc  README.md  anomaliespoc.chart.py  anomaliespoc.conf
collectors/slabinfo.plugin/: CMakeLists.txt  slabinfo.c
collectors/statsd.plugin/: CMakeLists.txt  statsd.c
collectors/systemd-journal.plugin/: systemd-journal-annotations.c  systemd-journal-files.c
collectors/tc.plugin/: CMakeLists.txt  plugin_tc.c
collectors/timex.plugin/: CMakeLists.txt
collectors/xenstat.plugin/: CMakeLists.txt  xenstat_plugin.c
libnetdata/: CMakeLists.txt  Makefile.am  config.h.cmake  inlined.h  libnetdata.c  libnetdata.h  required_dummies.h
libnetdata/aral/: aral.c  aral.h
libnetdata/arrayalloc/: arrayalloc.c
libnetdata/avl/: avl.h
libnetdata/buffer/: buffer.c  buffer.h
libnetdata/circular_buffer/: circular_buffer.c  circular_buffer.h
libnetdata/clocks/: clocks.h
libnetdata/codecs/: base64.c  base64.h
libnetdata/completion/: completion.c  completion.h
libnetdata/config/: appconfig.c  appconfig.h
libnetdata/dictionary/: dictionary.c  dictionary.h
libnetdata/ebpf/: ebpf.c
libnetdata/gorilla/: fuzzer.sh  gorilla.cc  gorilla.h
libnetdata/json/: json.c
libnetdata/july/: july.c
libnetdata/labels/: labels.cc  labels.h
libnetdata/libjudy/: CMakeLists.txt
libnetdata/locks/: locks.c  locks.h  mutex.c  mutex.h  spinlock.c  spinlock.h
libnetdata/log/: log.c  log.h
libnetdata/onewayalloc/: onewayalloc.c
libnetdata/popen/: popen.c  popen.h
libnetdata/procfile/: procfile.c  procfile.h
libnetdata/procfile/re2c/: common.h  driver.sh  main.cc  proc_pid_io.c  proc_pid_io.cc  proc_pid_io.h  proc_pid_io.in.c  proc_pid_stat.c  proc_pid_stat.cc  proc_pid_stat.h  proc_pid_stat.in.c  proc_pid_status.c  proc_pid_status.cc  proc_pid_status.h  proc_pid_status.in.c  proc_stat.c  proc_stat.cc  proc_stat.h  proc_stat.in.c
libnetdata/query_progress/: progress.c
libnetdata/socket/: security.c
libnetdata/storage_number/: storage_number.c  storage_number.h
libnetdata/string/: string.c  string.h
libnetdata/threads/: threads.c
libnetdata/worker_utilization/: worker_utilization.c
packaging/dag/: images.py  main.py  pyproject.toml  requirements.txt
packaging/dag/old/: nd.py
rnd/adapter/: Cargo.toml  build.rs
src/crates/: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/crates/.helix/: languages.toml
src/crates/fst-index/: Cargo.toml
src/crates/hello-service/: Cargo.toml  README.md
src/crates/histogram-viz/: Cargo.toml  README.md
src/crates/jf/: Cargo.toml  run-otel-plugin.sh  run.sh
src/crates/journal/: Cargo.toml
src/crates/journal-common/: Cargo.toml
src/crates/journal-core/: Cargo.toml
src/crates/journal-datafusion/: Cargo.toml  README.md
src/crates/journal-engine/: Cargo.toml
src/crates/journal-file-index/: Cargo.toml
src/crates/journal-fst-indexer/: .gitignore  Cargo.toml  README.md
src/crates/journal-index/: Cargo.toml
src/crates/journal-log-writer/: Cargo.toml
src/crates/journal-registry/: Cargo.toml
src/crates/journal-sql/: Cargo.toml  README.md
src/crates/journal-tools/: Cargo.toml
src/crates/journalctl/: Cargo.toml
src/crates/multicall/: Cargo.toml  README.md
src/crates/ndr/: Cargo.toml
src/crates/netdata-journal/: Cargo.toml
src/crates/netdata-log-viewer/: Cargo.toml  DEVELOPMENT.md  FACETS_ANALYSIS.md  FACETS_DATA_FLOW.txt  FACETS_KEY_FINDINGS.md  QUICKSTART.md  README.md  README_FACETS.md  TRANSFORMATION_COMPARISON.md
src/crates/netdata-otel/: Cargo.toml
src/crates/netdata-plugin/: Cargo.toml
src/crates/netdata-schema/: Cargo.toml
src/crates/nm/: Cargo.toml  README.md
src/crates/otel-plugin/: Cargo.toml
src/crates/packelf/: Cargo.toml  build.rs
src/crates/packelf-runtime/: Cargo.toml  README.md
src/crates/packelf-stub/: Cargo.toml
src/crates/prompt/: Cargo.toml
src/crates/rdp/: Cargo.toml
src/crates/schema-generator/: Cargo.toml
src/crates/slotlog/: Cargo.toml  (+1 more)
src/otel/: Cargo.toml  circular_buffer.h  cli.h  metadata.h  otel-receivers-config.yaml  otel.cc  otel_chart.cc  otel_chart.h  otel_chart.hpp  otel_chart_tests.cc  otel_circular_buffer.h  otel_circular_buffer_tests.cc  otel_config.hpp  otel_flatten.cc  otel_flatten.hpp  otel_hash.cc  otel_hash.hpp  otel_ingest.cc  otel_ingest.hpp  otel_ingestor.cc  otel_ingestor.h  otel_ingestor.hpp  otel_iterator.h  otel_iterator.hpp  otel_process.cc  otel_process.hpp  otel_sort.cc  otel_sort.hpp  otel_transform.cc  otel_transform.hpp  otel_utils.cc  otel_utils.h  otel_utils.hpp  resource_attributes.h
(+1208 files in other folders)
